# shuttle-axum-htmx-ex

./: Cargo.toml  README.md
src/: main.rs
templates/: base.html  index.html  meme.html  stream.html  styles.css  todo.html  todos.html
