[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
shuttle-axum = "0.29.0"
shuttle-runtime = "0.29.0"
shuttle-shared-db = { version = "0.29.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.28.2"
